include(BuildModule)

set(MODULE_MODULE_NAME TcpChannel)
set(MODULE_IDE_FOLDER framework/Utilities)

set(MODULE_HEADER_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(MODULE_HEADER_FILES
    include/ucf/Utilities/TcpChannel/TcpChannelConfig.h
    include/ucf/Utilities/TcpChannel/ITcpChannelCallback.h
    include/ucf/Utilities/TcpChannel/ITcpChannel.h
)
set(MODULE_SOURCE_PRIVATE
    src/TcpChannel.h
    src/TcpChannel.cpp
    src/TcpChannelLogger.h
    src/SocketHelper.h
)

# Platform-specific source files
if(WIN32)
    list(APPEND MODULE_SOURCE_PRIVATE src/SocketHelper_Win.cpp)
else()
    list(APPEND MODULE_SOURCE_PRIVATE src/SocketHelper_Unix.cpp)
endif()

set(MODULE_DEPENDENCIES_PUBLIC
    UtilitiesCommonFile
    NotificationHelper
)
set(MODULE_DEPENDENCIES_PRIVATE
    LoggerUtils
)

# Link Winsock on Windows
if(WIN32)
    set(MODULE_PLATFORM_LIBS ws2_32)
endif()

set(MODULE_BUILD_INTERFACE_DIR ${MODULE_HEADER_BASE_DIR})
set(MODULE_INSTALL_INTERFACE_DIR include)
set(MODULE_BUILD_PRIVATE_DIR src)

BuildModule(
MODULE_NAME ${MODULE_MODULE_NAME}
TARGET_SOURCE_PRIVATE ${MODULE_SOURCE_PRIVATE}
TARGET_SOURCE_HEADER_BASE_DIR ${MODULE_HEADER_BASE_DIR}
TARGET_SOURCE_PUBLIC_HEADER ${MODULE_HEADER_FILES}
TARGET_ADD_LINK_LIBRARY_PRIVATE ${MODULE_DEPENDENCIES_PRIVATE} ${MODULE_PLATFORM_LIBS}
TARGET_ADD_LINK_LIBRARY_PUBLIC ${MODULE_DEPENDENCIES_PUBLIC}
TARGET_INCLUDE_DIRECTORIES_BUILD_INTERFACE  ${MODULE_BUILD_INTERFACE_DIR}
TARGET_INCLUDE_DIRECTORIES_INSTALL_INTERFACE ${MODULE_INSTALL_INTERFACE_DIR}
TARGET_INCLUDE_DIRECTORIES_PRIVATE ${MODULE_BUILD_PRIVATE_DIR}
TARGET_DEFINITIONS ${ADD_UTILITIES_DEFINITIONS}
IDE_FOLDER ${MODULE_IDE_FOLDER}
)

add_subdirectory(test)
