add_subdirectory(LoggerUtils)
add_subdirectory(TimeUtils)
add_subdirectory(UUIDUtils)
add_subdirectory(StringUtils)
add_subdirectory(OSUtils)
add_subdirectory(SystemUtils)
add_subdirectory(FilePathUtils)
add_subdirectory(ThreadPoolUtils)
add_subdirectory(CompressionUtils)
add_subdirectory(Base64Utils)
add_subdirectory(StateMachineUtils)
add_subdirectory(JsonUtils)
